--- a/Todos/MainWindow.xaml
+++ b/Todos/MainWindow.xaml
@@ -1,12 +1,83 @@
-﻿<Window x:Class="Todos.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Todos"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="Todos.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:views="clr-namespace:Todos.Views"
+    Title="MainWindow"
+    Width="720"
+    Height="360"
+    mc:Ignorable="d">
+
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Styles.xaml" />
+                <ResourceDictionary Source="Resources/Templates.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+
     <Grid>
-        
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <Button
+                Grid.Column="0"
+                Command="{Binding AddCommand}"
+                Content="&#xE710;"
+                FontFamily="Segoe MDL2 Assets"
+                Style="{StaticResource PrimaryButton}" />
+            <Button
+                Grid.Column="1"
+                Command="{Binding RefreshCommand}"
+                Content="&#xE72C;"
+                FontFamily="Segoe MDL2 Assets"
+                Style="{StaticResource PrimaryButton}" />
+            <TextBox
+                Grid.Column="2"
+                Style="{StaticResource LargeTextBox}"
+                Text="Search..." />
+            <Button
+                Grid.Column="3"
+                Command="{Binding EditCommand}"
+                Content="&#xE70F;"
+                FontFamily="Segoe MDL2 Assets"
+                Style="{StaticResource PrimaryButton}" />
+            <Button
+                Grid.Column="4"
+                Command="{Binding RemoveCommand}"
+                Content="&#xE74D;"
+                FontFamily="Segoe MDL2 Assets"
+                Style="{StaticResource PrimaryButton}" />
+        </Grid>
+
+        <Grid Grid.Row="1">
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <views:TodosView />
+            <ContentControl Grid.Column="0" Content="{Binding Main}" />
+            <ContentControl Grid.Column="1" Content="{Binding Secondary}" />
+
+        </Grid>
     </Grid>
+
 </Window>
