--- a/Todos/Views/TodosView.xaml
+++ b/Todos/Views/TodosView.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:todos="clr-namespace:Todos"
     d:DesignHeight="300"
     d:DesignWidth="640"
     mc:Ignorable="d">
@@ -17,15 +18,75 @@
         </ResourceDictionary>
     </UserControl.Resources>
 
-
     <Grid>
-        <ListView
-            ItemTemplate="{StaticResource TodoItemTemplate}"
-            ItemsSource="{Binding Todos}"
-            ScrollViewer.CanContentScroll="True"
-            SelectedItem="{Binding Selected}"
-            Style="{StaticResource TodosList}" />
-    </Grid>
 
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <Button
+                Grid.Column="0"
+                Command="{Binding AddCommand}"
+                Content="&#xE710;"
+                FontFamily="Segoe MDL2 Assets"
+                Style="{StaticResource PrimaryButton}" />
+
+            <Button
+                Grid.Column="1"
+                Command="{Binding RefreshCommand}"
+                Content="&#xE72C;"
+                FontFamily="Segoe MDL2 Assets"
+                Style="{StaticResource PrimaryButton}" />
+
+            <TextBox
+                Grid.Column="2"
+                Style="{StaticResource LargeTextBox}"
+                Text="{Binding Search, UpdateSourceTrigger=PropertyChanged}" />
+
+            <Button
+                Grid.Column="3"
+                Command="{Binding EditCommand}"
+                Content="&#xE70F;"
+                FontFamily="Segoe MDL2 Assets"
+                Style="{StaticResource PrimaryButton}" />
+
+            <Button
+                Grid.Column="4"
+                Command="{Binding RemoveCommand}"
+                Content="&#xE74D;"
+                FontFamily="Segoe MDL2 Assets"
+                Style="{StaticResource PrimaryButton}" />
+        </Grid>
+
+        <Grid Grid.Row="1">
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <ListView
+                Grid.Column="0"
+                ItemTemplate="{StaticResource TodoItemTemplate}"
+                ItemsSource="{Binding ProcessedTodos}"
+                ScrollViewer.CanContentScroll="True"
+                SelectedItem="{Binding Selected}"
+                Style="{StaticResource TodosList}" />
+
+            <ContentControl Grid.Column="1" Content="{Binding Current}" />
+
+        </Grid>
+    </Grid>
 
 </UserControl>
